# turnpike

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
app/: main.py
app/middleware/: auth.py  rate_limit.py
app/routes/: answer_routed.py  classify_complexity.py  conversation_turn.py  health.py
app/schemas/: answer_routed_request.py  answer_routed_response.py  classify_complexity_request.py  classify_complexity_response.py  conversation_turn_request.py  conversation_turn_response.py
app/services/: context_manager.py  routing.py  token_counter.py
evals/assertions/: context_checks.py  routing_checks.py  schema_checks.py
evals/datasets/: answer_routed_cases.jsonl  classify_cases.jsonl  conversation_turn_cases.jsonl
evals/runners/: common.py  run_answer_routed_eval.py  run_classify_eval.py  run_conversation_turn_eval.py
examples/: sample_report.md  sample_telemetry.jsonl
reporting/: __init__.py  make_report.py
src/turnpike/: __init__.py  context.py  envelope.py  semconv.py
src/turnpike/gateway/: __init__.py  client.py  cost_model.py  otel_setup.py  policies.py  provider.py  semconv.py  telemetry.py
tests/: conftest.py  test_auth.py  test_context.py  test_context_integration.py  test_envelope.py  test_evals.py  test_example_artifacts.py  test_gateway.py  test_health.py  test_public_api.py  test_rate_limit.py  test_reporting.py  test_routes.py  test_schemas.py  test_semconv.py  test_services.py  test_telemetry_dimensions.py  test_token_counter.py
